--- a/style.css
+++ b/style.css
@@ -20,10 +20,15 @@ label {
   text-transform: uppercase;
 }
 
+form {
+  width: 300px;
+  padding: 0 20px;
+}
+
 input {
+  width: 100%;
   border: 2px solid #000;
   border-radius: 4px;
   padding: 10px 4px 10px 10px;
-  width: 300px;
   outline: none;
 }
